# CERT-FLOW

./: .gitignore  CHANGELOG.md  CITATION.cff  DEPLOY.md  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/: README.md  related-work-2026.md
docs/results/: ablations.md  cia-comparison.md  crossover-2026.md  extended-validation.md  extern-baselines.md  feature-regimes.md  gaussian-break.md  hybrid-sensing-2026.md  lifelong.md  limitations.md  live-wiring-2026.md  metr-la.md  movingai.md  multiagent.md  published-speed-comparison.md  scale.md  spatial-predictor-study.md  tier0-coverage.md  tier1-latency.md  tier2-regret.md  width-attack-2026.md
docs/specs/: design-spec.md
docs/theory/: theory-notes.md
scripts/: make_figures.py  run_ablations.py  run_ch.py  run_cia_comparison.py  run_crossover_regret.py  run_extern_baselines.py  run_feature_regimes.py  run_gaussian_break.py  run_hybrid_sensing.py  run_lifelong.py  run_live_wiring.py  run_metr_la.py  run_movingai.py  run_predictor_retrain.py  run_repeated_queries.py  run_roadnet.py  run_scale.py  run_tier0.py  run_tier0_baselines.py  run_tier1_latency.py  run_tier2.py  run_watch_testability.py  run_width_attack.py  study_spatial_predictor.py  viz_compare.py
scripts/extval/: baseline_battery.py  correlated_world.py  fetch_fomo.py  fomo_validation.py  scaling.py  shift_world.py  stress_adversarial.py  stress_cal_shift.py  stress_correlated.py
scripts/viz_gen/: cert-break-grid.py  cert-break-movingai.py  certified_corridor.py  live_wiring_fig.py  pasc_vs_bonferroni.py  sensing-grid.py  sensing-movingai.py  sensing_regret.py  staleness-metrla.py  watch_alarm.py  width_methods.py
site/: DEPLOY.md  index.html
src/certflow/: __init__.py  baselines.py  cert.py  ch.py  conformal.py  drift.py  egraph.py  episodes.py  fastgraph.py  graphcore.py  harness.py  movingai.py  oracle.py  realworld.py  roadnet.py  sensing.py  snapshot.py  team.py  types.py
tests/: test_baselines.py  test_cert.py  test_ch.py  test_cia.py  test_conformal.py  test_drift_oracle.py  test_egraph.py  test_episodes.py  test_fastgraph.py  test_graphcore.py  test_harness.py  test_live_wiring.py  test_lp_shift.py  test_movingai.py  test_movingai_experiment.py  test_pasc_watch.py  test_realworld.py  test_roadnet.py  test_sfogd.py  test_shrink_license.py  test_snapshot.py  test_state_sync.py  test_team.py  test_tier1_smoke.py  test_tier2_smoke.py
