[project]
name = "certflow"
version = "0.1.0"
authors = [{name = "Krishi Attri", email = "krishiattriwork@gmail.com"}]
license = {text = "MIT"}
description = "CERT: Conformal Edge-cost Routing under Time-drift"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
fast = ["numba"]
dev = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/certflow"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
