[project]
name = "certflow"
version = "1.0.2"
authors = [{name = "Krishi Attri", email = "krishiattriwork@gmail.com"}]
license = {text = "MIT"}
description = "Certified route planning under drifting costs: conformal LB<=OPT<=UB certificates, certificate-directed sensing, proof-gated preprocessing"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "route-planning",
    "conformal-prediction",
    "path-planning",
    "uncertainty-quantification",
    "robotics",
    "d-star-lite",
    "contraction-hierarchies",
    "operations-research",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/Archerkattri/CERT-FLOW"
Repository = "https://github.com/Archerkattri/CERT-FLOW"
Documentation = "https://github.com/Archerkattri/CERT-FLOW/tree/main/docs"
Issues = "https://github.com/Archerkattri/CERT-FLOW/issues"

[project.optional-dependencies]
fast = ["numba>=0.59"]
dev = ["pytest>=7.0"]
realworld = ["pandas>=1.5", "tables>=3.7"]
plots = ["matplotlib>=3.7"]        # scripts/make_figures.py
bench = ["networkx>=3.0"]          # scripts/run_repeated_queries.py external baseline

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/certflow"]

[tool.hatch.build.targets.sdist]
include = [
    "src/certflow",
    "tests",
    "README.md",
    "LICENSE",
    "CITATION.cff",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
